# ai3j

./: .gitignore  README.md  pdf_to_md.py  pyproject.toml  requirements.txt
data/: README.md
data/poweron_docs/: poweron-cd-renew.md  poweron-change-of-address.md  poweron-loan-payment-skip.md  poweron-loan-payoff.md  poweron-member-to-member-transfers.md  poweron-open-sub-account.md  poweron-overdraft-tolerance.md  poweron-withdraw-by-check.md
data/poweron_scripts/: banno.xfrtodqloan.rpt
src/: chat_handler.py  create_model.py  dir_crawl.py  test.py
src/isos/: actions.py  types.py
src/messages/: actions.py  types.py
src/modelhub/: juliet.toml  marvin.toml
src/modelhub/modelfiles/: juliet.modelfile  marvin.modelfile
src/modelhub/templates/: iso.modelfile  iso.toml
src/tools/: utils.py
src/tools/file_data/: corpus_chunker.py  source_specific.py
src/tools/nlp/: sentiment.py
src/tools/web_data/: wikipedia.py
src/vdb/: chdb.py
